feat(gateway): v1.1 hardening + OEE task
- .env.example seguro e SECURITY_NOTES
- overlay de healthchecks + ordem de subida
- telegraf: global_tags + processors externos (32bit join/quality)
- tasks Influx: oee_agg_15m (mvp_raw -> mvp_agg)
- queries Flux de exemplo p/ Grafana
- paradas planejadas (csv + helper) e stops.py com tags planned/site/linha/maquina
- docs: merge instructions e README com notas de setup e recomendações PLC

--- a/mvp_shadow_gateway/.env.example
+++ b/mvp_shadow_gateway/.env.example
@@ -1,17 +1,21 @@
-# Copie para .env e ajuste conforme ambiente.
+# Copie para .env e ajuste conforme ambiente (não comitar este arquivo).
+
+# PLC / Modbus
 MB_HOST=192.168.1.121
 MB_UNIT=1
 
+# InfluxDB v2
 INFLUX_USER=admin
-INFLUX_PASS=admin123
+INFLUX_PASS=<definir-no-setup>
 INFLUX_ORG=retrofit4
 INFLUX_BUCKET=mvp
-INFLUX_TOKEN=admintoken
+INFLUX_TOKEN=<preencher-pelo-setup>
 
+# Grafana
 GRAFANA_USER=admin
-GRAFANA_PASS=admin
+GRAFANA_PASS=<definir-no-setup>
 
-# Tags
+# Tags de contexto
 SITE=Bento
 LINHA=Seccionadora01
 MAQUINA=Maquina01
@@ -19,7 +23,7 @@ MAQUINA=Maquina01
 # Paradas
 STOP_THRESHOLD=120
 
-# MQTT opcional
+# MQTT (opcional)
 MQTT_ENABLE=false
 MQTT_HOST=mosquitto
 MQTT_PORT=1883
