--- a/mvp_shadow_gateway/telegraf/telegraf.conf
+++ b/mvp_shadow_gateway/telegraf/telegraf.conf
@@ -6,6 +6,11 @@
   metric_batch_size = 1000
   metric_buffer_limit = 10000
 
+[global_tags]
+  SITE = "${SITE}"
+  LINHA = "${LINHA}"
+  MAQUINA = "${MAQUINA}"
+
 # --- INPUT: Modbus TCP (S7-1200 MB_SERVER) ---
 [[inputs.modbus]]
   name = "modbus"
@@ -33,37 +38,11 @@
 # --- PROCESSORS: compute GoodCount/ScrapCount DINT and Quality ---
 [[processors.starlark]]
   namepass = ["modbus"]
-  source = '''
-def _as_int(v):
-  if v == None:
-    return 0
-  return int(v)
+  script = "/etc/telegraf/processors/32bit_join.star"
 
-def apply(metric):
-  # Compose 32-bit counters from hi/lo 16-bit words
-  lo_g = _as_int(metric.fields.get("GoodCount_lo"))
-  hi_g = _as_int(metric.fields.get("GoodCount_hi"))
-  lo_s = _as_int(metric.fields.get("ScrapCount_lo"))
-  hi_s = _as_int(metric.fields.get("ScrapCount_hi"))
-  good = (hi_g << 16) + lo_g
-  scrap = (hi_s << 16) + lo_s
-  metric.fields["GoodCount"] = good
-  metric.fields["ScrapCount"] = scrap
-  total = good + scrap
-  if total > 0:
-    metric.fields["Quality"] = good / total
-  else:
-    metric.fields["Quality"] = 0.0
-
-  # Normalize x10 analogs
-  cur = metric.fields.get("Current_x10")
-  if cur != None:
-    metric.fields["Current_pct"] = cur / 10.0
-  vib = metric.fields.get("Vibration_x10")
-  if vib != None:
-    metric.fields["Vibration_pct"] = vib / 10.0
-  return metric
-'''
+[[processors.starlark]]
+  namepass = ["modbus"]
+  script = "/etc/telegraf/processors/quality.star"
 
 # --- OUTPUT: InfluxDB v2 ---
 [[outputs.influxdb_v2]]
