feat(gateway): mqtt config versionada + limites de recursos\n\n- mosquitto/conf/mosquitto.conf + volumes data/log\n- healthcheck do broker e perfil mqtt\n- .env.example com MQTT_USERNAME/PASSWORD\n- exemplo comentado de inputs.mqtt_consumer no Telegraf\n- limites de cpu/mem para telegraf/mosquitto/stops\n- README: instruções de senha e limites

--- a/mvp_shadow_gateway/.env.example
+++ b/mvp_shadow_gateway/.env.example
@@ -28,3 +28,5 @@ MQTT_ENABLE=false
 MQTT_HOST=mosquitto
 MQTT_PORT=1883
 MQTT_TOPIC_PREFIX=oee/${SITE}/${LINHA}/${MAQUINA}
+MQTT_USERNAME=iotuser
+MQTT_PASSWORD=<definir-no-setup>
