--- a/mvp_shadow_gateway/telegraf/telegraf.conf
+++ b/mvp_shadow_gateway/telegraf/telegraf.conf
@@ -50,3 +50,11 @@
   token = "${INFLUX_TOKEN}"
   organization = "${INFLUX_ORG}"
   bucket = "${INFLUX_BUCKET}"
+
+# --- OPTIONAL INPUT: MQTT consumer (enable if using MQTT) ---
+# [[inputs.mqtt_consumer]]
+#   servers = ["tcp://mosquitto:1883"]
+#   topics = ["plc/+/metrics"]
+#   username = "${MQTT_USERNAME}"
+#   password = "${MQTT_PASSWORD}"
+#   data_format = "json"
