telegraf: switch to TIA v16 holding-only mapping; README: add v16 MB_SERVER guidance and mapping

--- a/mvp_shadow_gateway/telegraf/telegraf.conf
+++ b/mvp_shadow_gateway/telegraf/telegraf.conf
@@ -54,7 +54,7 @@
   organization = "${INFLUX_ORG}"
   bucket = "${INFLUX_BUCKET}"
 
-# OPTIONAL INPUT: MQTT consumer (enable if using MQTT)
+# OPTIONAL INPUT: MQTT (exemplo)
 # [[inputs.mqtt_consumer]]
 #   servers = ["tcp://mosquitto:1883"]
 #   topics = ["plc/+/metrics"]
